--- a/components/topLanding/topLanding.module.css
+++ b/components/topLanding/topLanding.module.css
@@ -2,8 +2,10 @@
 
 .top_landing_left{
     float : left;
-    height: 800px;
+    height: 500px;
     width: 50%;
+    /* background-color: teal;
+    color: rgb(221, 221, 7); */
 }
 
 
@@ -13,8 +15,7 @@
     width: 50%;
     /* background-color: cyan; */
     background: url("../../public//landing_photo.jpg");
-    object-position: -40% 0;
-    background-size:cover;
+    background-size: cover;
 }
 
 .find{
@@ -27,17 +28,26 @@
     font-weight : bold;
     text-align: right;
     font-size: 100px;
+    font-size: 70px;
+    height: 0px;
     /* padding : 200px */
 }
 
 .container{
     height : 800px;
+
 }
 
 .propertyText{
     font-size : 30px;
-    display : inline-block;
-    padding-bottom : 50px;
+    /* display : inline-block; */
+    /* padding-bottom : 50px; */
+    margin: 0;
+    padding: 0 20px 0 0;
+    display: inline;
+    float: right;
+    font-family: 'Playfair Display', serif;
+    font-style : normal;
 }
 
 @media only screen and (max-width: 600px){
@@ -47,12 +57,41 @@
     }
     .top_landing_left{
         float : none;
-        width : 80%;
+        width : 60%;
         margin: 0;
         padding: 0;
         height: 400px;
+        margin: 0 auto;
+     
     }
     .container{
-        height: 450px;
+        height: 300px;
     }
+    .find{
+        /* vertical-align: middle; */
+        margin: 220px 0;
+        padding-right: 30px;
+        /* font-family: serif; */
+        font-family: 'Playfair Display', serif;
+        font-style : normal;
+        font-weight : bold;
+        text-align: right;
+        font-size: 70px;
+        height: 10px;
+        /* padding : 200px */
+    }
+    .propertyText{
+        margin: 0;
+        padding: 0 20px 0 0;
+        display: inline;
+        float: right;
+        font-family: 'Playfair Display', serif;
+        font-style : normal;
+        /* font-weight : bold; */
+    }
+    /* .container{
+        margin: 0;
+        padding: 0;
+        height: 300px;
+    } */
 }
